[build-system]
requires = ["hatchling >=1.26"]
build-backend = "hatchling.build"

[project]
name = "db_feedback_ptakizawa"
vertion = "0.0.1"
authors = [
    {"Peter Takizawa", email="peter.takizawa@gmail.com"},
]
description = "Generate a summary evaluations data from BlueDogs"
readme = "README.md"
requires-python  = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent,
]
dependencies = [
    "pandas >=2.2.3",
    "streamlit >= 1.44.1",
    "python-docx >= 1.1.2",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
https://github.com/ptakizawa/feedback
https://github.com/ptakizawa/feedback/issues
